samples/_failures_safe/1761643972_92fe5e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afc61dfc.c: In function ‘compress_data’:
./samples/SAFE/__tmp_afc61dfc.c:169:21: error: expected ‘)’ at end of input
  169 |         switch (type
      |                ~    ^
      |                     )
./samples/SAFE/__tmp_afc61dfc.c:169:9: error: expected declaration or statement at end of input
  169 |         switch (type
      |         ^~~~~~
./samples/SAFE/__tmp_afc61dfc.c:169:9: error: expected declaration or statement at end of input
